bug fix for content hidden behind footer

--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -3,9 +3,12 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-    padding: 10px;
     background-color: rgb(29, 29, 29);
     color: white;
     padding: 1.4em;
-    font-size: 0.8em;
+    font-size: 0.9em;
+}
+
+#ftr-mrgn{
+    height: 3.73em;
 }
